# gssproxy

./: meson.build  meson_options.txt
docs/: README.md
man/: gssproxy-mech.8.xml.in  gssproxy.conf.5.xml
proxy/: Makefile.am  configure.ac
proxy/man/: gssproxy.8.xml  gssproxy.conf.5.xml
proxy/src/: gp_config.c  gp_creds.c  gp_export.c  gp_init.c  gp_socket.c  gssproxy.c
proxy/src/client/: gpm_common.c
proxy/src/mechglue/: gpp_creds.c
src/: gp_export.c  gssproxy.c
src/client/: gpm_common.c
systemd/: gssproxy.service.in
tests/: testlib.py
